--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -221,7 +221,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -287,7 +287,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -348,7 +348,7 @@ using?...</p>
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -459,7 +459,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-in-gruen-und-bau.de/job/000765/'>Business Intelligence Consultant (m/w/d) </a></h5> 
+<h5><a href='https://jobs-in-gruen-und-bau.de/job/000765/'>Business Intelligence Consultant (m/w/d) </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
